add top bar, get started, crescent setup

--- a/style.css
+++ b/style.css
@@ -1,9 +1,74 @@
-body{
- margin: 0px !important;
-padding: 0px;
-box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
-.bg{
-  width: 100vw;
-  border: none;
+
+.netflix_section_1 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5)),
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/8200f588-2e93-4c95-8eab-ebba17821657/web/IN-en-20250616-TRIFECTA-perspective_9cbc87b2-d9bb-4fa8-9f8f-a4fe8fc72545_large.jpg");
+  width: 100%;
+  height: 100vh;
+}
+
+.netflix_section_1_top_bar {
+  height: 88px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 200px;
+}
+
+.netflix_section_1_top_bar_logo {
+}
+
+.netflix_section_1_top_bar_buttons {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.netflix_section_1_top_bar_buttons_language {
+}
+
+.netflix_section_1_top_bar_buttons_signin {
+}
+
+.netflix_section_1_get_started {
+  width: 100%;
+  height: calc(100% - 188px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.netflix_section_1_get_started_text_1 {
+  font-size: 56px;
+  font-weight: 700;
+  width: 588px;
+  text-align: center;
+}
+
+.netflix_section_1_get_started_text_2 {
+}
+
+.netflix_section_1_get_started_text_3 {
+}
+
+.netflix_section_1_get_started_email_input_and_button {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.netflix_section_1_crescent {
+  width: 100%;
+  border-radius: 100%;
+  border: 4px solid red;
+  height: 100px;
+  background-color: white;
 }
