--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 }
 
 .netflix_section_1 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7)),
     url("https://assets.nflxext.com/ffe/siteui/vlv3/8200f588-2e93-4c95-8eab-ebba17821657/web/IN-en-20250616-TRIFECTA-perspective_9cbc87b2-d9bb-4fa8-9f8f-a4fe8fc72545_large.jpg");
+  background-size: cover;
   width: 100%;
   height: 100vh;
 }
@@ -19,7 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 200px;
+  padding: 0px 148px;
 }
 
 .netflix_section_1_top_bar_logo {
@@ -28,13 +29,46 @@
 .netflix_section_1_top_bar_buttons {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8px;
+  height: 34px;
 }
 
 .netflix_section_1_top_bar_buttons_language {
+  display: flex;
+  align-items: center;
+  width: 124.4px;
+}
+label {
+}
+select {
+  background-color: rgba(0, 0, 0, 0.7);
+  font-size: 15px;
+  border-radius: 5px;
+  /* height: 32px;
+  width: 100px; */
+  display: flex;
+  padding: 6px 36px 6px 34px;
+  width: 100%;
+  text-align: left;
 }
 
 .netflix_section_1_top_bar_buttons_signin {
+}
+
+.signinbutton {
+  background-color: red;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  height: 32px;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 .netflix_section_1_get_started {
