--- a/style.css
+++ b/style.css
@@ -85,12 +85,17 @@ select {
   font-weight: 700;
   width: 588px;
   text-align: center;
+  margin-bottom: 16px;
 }
 
 .netflix_section_1_get_started_text_2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 32px;
 }
 
 .netflix_section_1_get_started_text_3 {
+  font-size: 16px;
 }
 
 .netflix_section_1_get_started_email_input_and_button {
