add language selector

--- a/style.css
+++ b/style.css
@@ -37,20 +37,32 @@
 .netflix_section_1_top_bar_buttons_language {
   display: flex;
   align-items: center;
-  width: 124.4px;
+  width: fit-content;
+  position: relative;
 }
-label {
+
+.netflix_section_1_top_bar_buttons_language_symbol {
+  position: absolute;
+  top: 8px;
+  left: 12px;
 }
+
+.netflix_section_1_top_bar_buttons_language_arrow {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+}
+
 select {
   background-color: rgba(0, 0, 0, 0.7);
   font-size: 15px;
   border-radius: 5px;
-  /* height: 32px;
-  width: 100px; */
   display: flex;
-  padding: 6px 36px 6px 34px;
-  width: 100%;
-  text-align: left;
+  align-items: center;
+  width: 124px;
+  padding: 0px 36px;
+  appearance: none;
+  height: 32px;
 }
 
 .netflix_section_1_top_bar_buttons_signin {
