--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ select {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
--webkit-font-smoothing: antialiased;}
+  -webkit-font-smoothing: antialiased;
+}
 
 .netflix_section_1_get_started {
   width: 100%;
@@ -104,7 +105,7 @@ select {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .netflix_section_1_get_started_text_1 {
@@ -130,7 +131,7 @@ select {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 90px;
+  gap: 50px;
   margin-top: 16px;
   height: 56px;
   /* width: 366.75px; */
@@ -141,14 +142,14 @@ netflix_section_1_get_started_email_input {
   height: 56px;
   width: 366.75px;
   /* padding: 8px; */
-  border: solid white 20px;
+  border: solid rgb(247, 236, 236) 20px !important;
 }
 
 .email-input {
   background-color: transparent;
   border: transparent;
   height: 100%;
-  width: 100%;
+  width: 366.75px;
 }
 
 input::placeholder {
@@ -158,7 +159,10 @@ input::placeholder {
   align-items: center;
 }
 
-netflix_section_1_get_started_button{
+netflix_section_1_get_started_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* width: 213.25px !important; */
 }
 
@@ -172,20 +176,42 @@ netflix_section_1_get_started_button{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 213.25px ;
+  width: 213.25px;
   font-size: 24px;
   font-weight: bold;
   justify-content: space-around;
-  position: inherit;
+  position: relative;
+  left: -35px;
 }
-
 
 .netflix_section_1_crescent {
   width: 100%;
   left: -15%;
   border-radius: 100%;
-  border: 4px solid ;
-  border-color: red transparent transparent;
+  border: 4px solid;
+  border-color: lightpink transparent transparent;
+  /* border-image: linear-gradient(45deg, #990a0a, #ee0979); */
   height: 100px;
-  background: radial-gradient(50% 500% at 50% -420%, rgba(64, 97, 231, 0.4) 80%, rgba(0, 0, 0, 0.1) 100%), black;
+  background: radial-gradient(
+      50% 500% at 50% -420%,
+      rgba(64, 97, 231, 0.4) 80%,
+      rgba(0, 0, 0, 0.1) 100%
+    ),
+    black;
+}
+
+.image-scrollbar-unit{
+  width: 100vw;
+  background-color: black;
+  height: 200px;
+  position: relative;
+  top: 0px;
+}
+
+.scroll-images {
+  height: 252px;
+  width: 180px;
+  background-image: url(https://occ-0-6245-2164.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABUhpdEpzHYfnPnHNbojySI_GMO9oaeZoaj-1hsW_orVNftH6TbH0sOBM4T-iixC82-cNn58AH3wyfEPPPIqeQ12zNja6KT3C9ojoXJLeQRs61XhQQYMxg0uicDwrwJITVsfC.webp?r=27c&quot);
+  display: flex;
+  flex-direction: row;
 }
