--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@
 }
 
 .netflix_section_1 {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8)),
-    url("https://assets.nflxext.com/ffe/siteui/vlv3/8200f588-2e93-4c95-8eab-ebba17821657/web/IN-en-20250616-TRIFECTA-perspective_9cbc87b2-d9bb-4fa8-9f8f-a4fe8fc72545_large.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.65)),
+    radial-gradient(
+      circle at center,
+      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 0.7) 100%
+    ),
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/75b0ed49-75ab-4a63-bd45-37bc2c95cb73/web/IN-en-20250623-TRIFECTA-perspective_ae5833b7-6ce5-4e88-853e-014f38c506f1_large.jpg");
+  background-position: center -28px;
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -138,11 +144,12 @@ select {
   padding: 8px;
 }
 
-netflix_section_1_get_started_email_input {
+.netflix_section_1_get_started_email_input {
   height: 56px;
   width: 366.75px;
   /* padding: 8px; */
-  border: solid rgb(247, 236, 236) 20px !important;
+  border: transparent !important;
+  backdrop-filter: blur(2px);
 }
 
 .email-input {
@@ -159,7 +166,7 @@ input::placeholder {
   align-items: center;
 }
 
-netflix_section_1_get_started_button {
+.netflix_section_1_get_started_button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -189,7 +196,7 @@ netflix_section_1_get_started_button {
   left: -15%;
   border-radius: 100%;
   border: 4px solid;
-  border-color: lightpink transparent transparent;
+  border-color: rgb(210, 48, 72) transparent  transparent;
   /* border-image: linear-gradient(45deg, #990a0a, #ee0979); */
   height: 100px;
   background: radial-gradient(
@@ -198,6 +205,7 @@ netflix_section_1_get_started_button {
       rgba(0, 0, 0, 0.1) 100%
     ),
     black;
+  margin-top: 32px;
 }
 
 /* .image-scrollbar-unit {
@@ -210,9 +218,10 @@ netflix_section_1_get_started_button {
   align-items: center;
 } */
 
-.netflix_section_2{
+.netflix_section_2 {
   background-color: black;
   height: 400px;
+  margin-top: 30px;
 }
 
 .image-scrollbar-container-unit {
@@ -225,20 +234,65 @@ netflix_section_1_get_started_button {
   gap: 16px;
   scroll-padding: 10px;
   margin: auto;
+  margin-top: 60px;
 }
 
 .image-scrollbar-container-unit::-webkit-scrollbar {
   display: none;
 }
 
-
 .scroll-images {
   height: 252px;
   width: 180px;
-  background-image: url(https://occ-0-6245-2164.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABUhpdEpzHYfnPnHNbojySI_GMO9oaeZoaj-1hsW_orVNftH6TbH0sOBM4T-iixC82-cNn58AH3wyfEPPPIqeQ12zNja6KT3C9ojoXJLeQRs61XhQQYMxg0uicDwrwJITVsfC.webp?r=27c&quot);
   background-size: cover !important;
   border-radius: 10px;
   flex: 0 0 50%;
   /* scroll-snap-align: start;
   scroll-snap-stop: always; */
+}
+
+.scroll-images-1 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABaW57jWqw0Gs9gqgmW816THwyNfPqphIiruQRFy9KXtt9PTPJpB4kzDKriPcpNjPKCj0itu1Yfjl-CR8rGEokBHPKE4O9lZQHXHRRpUHEelwoKk8lOf4gqlws-HnR2iZeSk4.webp?r=609&quot;);
+}
+.scroll-images-2 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABSlqHrOJU6pt2MtA_pqOW4MzrKY4pEOkg3JC8fr73T43h0DTet1vd1dyN8VIRvvmO13UtztA35mPgP5P_0w1ZuodX47qbMLEaCJ3XZiYxAQwnYZFJPkwEBbU8QeztnQjRQKg.webp?r=e07&quot;);
+}
+.scroll-images-3 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYUCgDPIk4LvnEw_j-dC5ca65oxm4yP2Z7RFKlRcN6WYzCwNA4MhTNqTRrSAK9zND3cSjrYEpbQculmTCXPD09ZbvdCosdbuOjc.webp?r=062&quot;);
+}
+.scroll-images-4 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABU73BvQjJgydQFEJ-vZZw9QtO8fL6lIxc71x9tOqxgDWh_BHokCWPIbGC5AxJjDk0D_sIH5KhmmYm9HLr3DKUXg8eo6nzF0rtSI.webp?r=d95&quot;);
+}
+.scroll-images-5 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYGL4_ns5MGTE5-Yd3ZQVB5apyY9yxQ39lxjT_27ehdoGzrxRwNc4osgXEeifcv9yO_MgMySL-p6hMxtQZnIEkZmyglIJ7wm7ik.webp?r=c23&quot;);
+}
+.scroll-images-6 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZ2Btia34ViHOdbGThR2xD0XYVD9vkdTkUULeET8PcHeq12ebMOJyLaTD1yS26NaRfUqDMknk2XnomOCg78WEKeN3VEDdOKzFRayBGveEZ-MeOaVD-v0z5P25idICKgt-nXX.webp?r=a1c&quot;);
+}
+.scroll-images-7 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABWtQdcUd4n6VKz6HTm_IbI2cOq0VDU7fDQpomIXBLuCYqtJ4j8hj2pz7j6spnX2osjRgTMJQ9xkMieYZWqC6xC8G4tGlTLJBm3I.webp?r=cc2&quot;);
+}
+.scroll-images-8 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYVcRfFB91jy3f8-_Alb6H4RUzqXFRA7ejjOfCOXF20XLRVeCyT3ZFEimKbZAimt2ayVUWXSnp6ApNxpoK0mA3XzJD__irrDkdMD6lDrOFPSvQqP8s0xn2dNBaU9JxIu4lUd.webp?r=63b&quot;);
+}
+.scroll-images-9 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABQqOh2yhpKE8385dV9hjlxxXtG63RjSjrlNOkx2yLuGMYe8JFTnA9ScVsioAhTa9Ds34ERhB2R4aBFUng1j54IFwl5JvjgVmGEU.webp?r=d66&quot;);
+}
+.scroll-images-10 {
+  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZFBdXweIqorvQIPkQbuKg9rFcZJJ8yCUzSX1ySYOsmrcMeUgLlY3YWvFcXee7lFjHwMT_Ofd03ttH-rTzAHPZskA6K-f4imBAY.webp?r=81d&quot;);
+}
+
+.number {
+  font-size: 100px !important;
+  font-weight: 700;
+  line-height: 1;
+  display: inline-block;
+  height: 1em;
+  color: rgb(249, 249, 249);
+  -webkit-text-stroke: 0.25rem rgb(255, 255, 255);
+  text-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.5);
+  content: attr(data-content);
+  -webkit-text-stroke: 0;
+  font: inherit;
+  cursor: pointer;
 }
