--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ input::placeholder {
   left: -15%;
   border-radius: 100%;
   border: 4px solid;
-  border-color: rgb(210, 48, 72) transparent  transparent;
+  border-color: rgb(210, 48, 72) transparent transparent;
   /* border-image: linear-gradient(45deg, #990a0a, #ee0979); */
   height: 100px;
   background: radial-gradient(
@@ -220,7 +220,7 @@ input::placeholder {
 
 .netflix_section_2 {
   background-color: black;
-  height: 400px;
+  height: 800px;
   margin-top: 30px;
 }
 
@@ -230,6 +230,7 @@ input::placeholder {
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  overflow-y: hidden;
   scroll-snap-type: x mandatory;
   gap: 16px;
   scroll-padding: 10px;
@@ -244,11 +245,15 @@ input::placeholder {
 .scroll-images {
   height: 252px;
   width: 180px;
-  background-size: cover !important;
+  background-size: contain !important;
   border-radius: 10px;
   flex: 0 0 50%;
   /* scroll-snap-align: start;
   scroll-snap-stop: always; */
+}
+
+.first-scrollbar-image {
+  padding: 0.5rem 1.375rem 22px;
 }
 
 .scroll-images-1 {
