--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ input::placeholder {
 }
 
 .netflix_section_3 {
-  height: 500px;
+  height: 1400px;
   background-color: black;
 }
 
@@ -311,15 +311,16 @@ input::placeholder {
   font-size: 24px;
   font-weight: 500;
   margin-left: 180px;
+  cursor: text;
 }
 
 .grid {
   background-color: black;
   display: grid;
-  height: 280px;
+  height: 320px;
   width: 90vw;
-  grid-template-columns: repeat(4,  clamp(180px, 29.5vw, 295px));
-  grid-template-rows:  280px;
+  grid-template-columns: repeat(4, clamp(180px, 29.5vw, 295px));
+  grid-template-rows: 280px;
   gap: 16px;
   justify-content: center;
   box-sizing: border-box;
@@ -333,16 +334,93 @@ input::placeholder {
   display: flex;
   border-radius: 16px;
   width: clamp(180px, 29.5vw, 295px);
-  height: 100%;
+  height: 280px;
+  flex-direction: column;
 }
 
-.box_text1{
+.box_text1 {
   display: flex;
   justify-content: flex-start;
   font-size: 24px;
   font-weight: 500;
   font-family: "NetflixCustomBold", sans-serif;
-  margin: 15px;
-  width: 100%;
-  height: 25%;
+  margin: 20px 0px 0px 20px;
+  width: 90%;
+  height: 20%;
+}
+
+.para {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: "NetflixCustomLight", sans-serif;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.para1 {
+  margin-top: -10px;
+}
+
+.para2 {
+  margin-top: 20px;
+}
+
+.para3 {
+  margin-top: -10px;
+}
+
+.para4 {
+  margin-top: -10px;
+}
+
+.image_in_box {
+  align-self: flex-end;
+  margin-top: auto;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.faq {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 8px;
+}
+.faq_text {
+  font-family: "NetflixCustomMedium", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  display: flex;
+  width: 45vw;
+  height: 70px;
+  align-items: center;
+  justify-content: center;
+}
+
+.question {
+  width: calc(100vw - 20%);
+  align-self: center;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(45, 45, 45);
+  height: 84px;
+  text-align: left;
+  margin-left: 80px;
+  padding: 24px;
+  font-size: 24px;
+  font-family: "NetflixCustomLight", sans-serif;
+  color: rgb(255, 255, 255);
+  -webkit-text-stroke: 0.1px;
+  transition: background-color 1s ease-in-out;
+  /* transition-duration: 250ms;
+  transition-property: background-color, margin-bottom, border-radius;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.68, 0.06); */
+}
+
+.question:hover{
+  filter: brightness(1.4); 
 }
