--- a/style.css
+++ b/style.css
@@ -1,590 +1,12 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  color: white;
-}
-
-@font-face {
-  font-family: "NetflixCustomBold";
-  src: url("fonts/NetflixSans-Bold.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "NetflixCustomMedium";
-  src: url("fonts/NetflixSans-Medium.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "NetflixCustomLight";
-  src: url("fonts/NetflixSans-Light.otf") format("opentype");
-}
-
-.netflix_section_1 {
-  background-image: linear-gradient(
-      12deg,
-      rgba(0, 0, 0, 0.85) 36%,
-      rgba(0, 0, 0, 0.8465) 40.58%,
-      rgba(0, 0, 0, 0.8361) 45.17%,
-      rgba(0, 0, 0, 0.8187) 49.75%,
-      rgba(0, 0, 0, 0.7944) 54.33%,
-      rgba(0, 0, 0, 0.7632) 58.92%,
-      rgba(0, 0, 0, 0.725) 63.5%,
-      rgba(0, 0, 0, 0.6868) 68.08%,
-      rgba(0, 0, 0, 0.6556) 72.67%,
-      rgba(0, 0, 0, 0.6313) 77.25%,
-      rgba(0, 0, 0, 0.6139) 81.83%,
-      rgba(0, 0, 0, 0.6035) 86.42%,
-      rgba(0, 0, 0, 0.6) 91%
-    ),
-    url("https://assets.nflxext.com/ffe/siteui/vlv3/05e91faa-6f6d-4325-934e-5418dcc2567b/web/IN-en-20250630-TRIFECTA-perspective_159086b1-425f-435b-bcd5-1ed8039cdef9_large.jpg");
-  background-position: center -28px;
-  background-size: cover;
-  width: 100%;
-  height: 105vh;
-  overflow: hidden;
-}
-
-.netflix_section_1_top_bar {
-  height: 88px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px 148px;
-}
-
-.netflix_section_1_top_bar_logo {
-}
-
-.netflix_section_1_top_bar_buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  height: 34px;
-}
-
-.netflix_section_1_top_bar_buttons_language {
-  display: flex;
-  align-items: center;
+.dropdown_button {
   width: fit-content;
-  position: relative;
-}
-
-.netflix_section_1_top_bar_buttons_language_symbol {
-  position: absolute;
-  top: 8px;
-  left: 12px;
-}
-
-.netflix_section_1_top_bar_buttons_language_arrow {
-  position: absolute;
-  top: 8px;
-  right: 12px;
-}
-
-select {
-  background-color: rgba(0, 0, 0, 0.7);
-  font-size: 15px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  width: 124.4px;
-  padding: 0px 36px;
-  appearance: none;
-  height: 32px;
-}
-
-.netflix_section_1_top_bar_buttons_signin {
-}
-
-.signinbutton {
-  background-color: red;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  height: 32px;
-  width: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-}
-
-.netflix_section_1_get_started {
-  width: 100%;
-  height: calc(100% - 188px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-.netflix_section_1_get_started_text_1 {
-  font-size: 56px;
-  width: 588px;
-  text-align: center;
-  margin-bottom: 16px;
-  font-family: "NetflixCustomBold", sans-serif;
-  cursor: text;
-}
-
-.netflix_section_1_get_started_text_2 {
+  height: 34px;
   font-size: 20px;
-  margin-bottom: 34px;
-  cursor: text;
-  font-family: "NetflixCustomMedium", sans-serif;
-}
-
-.netflix_section_1_get_started_text_3 {
-  font-size: 16px;
-  font-family: "NetflixCustomLight", sans-serif;
-  cursor: text;
-}
-
-.netflix_section_1_get_started_email_input_and_button {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 50px; /* 50px is too large; adjust as needed */
-  margin-top: 16px;
-  margin-left: 10px;
-  height: 56px;
-  padding: 0;
-}
-
-.netflix_section_1_get_started_email_input {
-  height: 56px;
-  width: 366px;
-  background: rgba(22, 22, 22, 0.85); /* slightly darker for uniformity */
+  padding: 8px;
+  border: 1px solid #ddd;
   border-radius: 4px;
-  border: 1px solid rgba(128, 128, 128, 0.7);
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  padding: 0 12px;
-}
-
-.email-input {
-  background-color: transparent;
-  height: 100%;
-  width: 100%;
-  caret-color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  border: none;
-  outline: none;
-  padding: 0;
-  color: white;
-}
-
-.email-input::placeholder {
-  font-size: 16px;
-  font-weight: 400;
-  font-family: "NetflixCustomLight", sans-serif;
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.netflix_section_1_get_started_button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.get-started-button {
-  color: white;
-  background-color: rgb(229, 9, 20);
-  border-radius: 3px;
-  border: none;
-  height: 56px;
   cursor: pointer;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 213.25px;
-  font-size: 24px;
-  font-weight: bold;
-  justify-content: space-around;
-  position: relative;
-  left: -35px;
-}
-
-.netflix_section_1_crescent {
-  width: 130%;
-  left: -15%;
-  border: 4px solid;
-  border-color: rgb(210, 48, 72) transparent transparent;
-  border-top-right-radius: 50% 100%;
-  border-top-left-radius: 50% 100%;
-  height: 100px;
-  background: radial-gradient(
-      50% 500% at 50% -420%,
-      rgba(64, 97, 231, 0.4) 80%,
-      rgba(0, 0, 0, 0.1) 100%
-    ),
-    black;
-  position: relative;
-  top: -10px;
-  margin: auto;
-}
-
-.netflix_section_2 {
-  background-color: black;
-  height: 380px;
-}
-
-.trending-now-text {
-  font-family: "NetflixCustomLight", sans-serif;
-  font-weight: 900;
-  width: calc(100vw - 25%);
-  margin: 0 auto;
-  cursor: text;
-}
-
-.image-scrollbar-container-unit {
-  width: calc(100vw - 25%);
-  height: fit-content;
-  display: flex;
-  flex-direction: row;
-  overflow-x: auto;
-  overflow-y: hidden;
-  scroll-snap-type: x mandatory;
-  gap: 40px;
-  scroll-padding: 10px;
-  margin: 0 auto;
-  margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.scrollbar-image:hover {
-  transform: scale(1.02);
-}
-
-.scroll-images {
-  height: 252px;
-  /* width: 180px; */
-  width: clamp(120px, 18vw, 180px);
-  background-size: contain !important;
-  border-radius: 10px;
-  flex: 0 0 50%;
-}
-
-.scroll-images-1 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABaW57jWqw0Gs9gqgmW816THwyNfPqphIiruQRFy9KXtt9PTPJpB4kzDKriPcpNjPKCj0itu1Yfjl-CR8rGEokBHPKE4O9lZQHXHRRpUHEelwoKk8lOf4gqlws-HnR2iZeSk4.webp?r=609&quot;);
-}
-.scroll-images-2 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABSlqHrOJU6pt2MtA_pqOW4MzrKY4pEOkg3JC8fr73T43h0DTet1vd1dyN8VIRvvmO13UtztA35mPgP5P_0w1ZuodX47qbMLEaCJ3XZiYxAQwnYZFJPkwEBbU8QeztnQjRQKg.webp?r=e07&quot;);
-}
-.scroll-images-3 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYUCgDPIk4LvnEw_j-dC5ca65oxm4yP2Z7RFKlRcN6WYzCwNA4MhTNqTRrSAK9zND3cSjrYEpbQculmTCXPD09ZbvdCosdbuOjc.webp?r=062&quot;);
-}
-.scroll-images-4 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABU73BvQjJgydQFEJ-vZZw9QtO8fL6lIxc71x9tOqxgDWh_BHokCWPIbGC5AxJjDk0D_sIH5KhmmYm9HLr3DKUXg8eo6nzF0rtSI.webp?r=d95&quot;);
-}
-.scroll-images-5 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYGL4_ns5MGTE5-Yd3ZQVB5apyY9yxQ39lxjT_27ehdoGzrxRwNc4osgXEeifcv9yO_MgMySL-p6hMxtQZnIEkZmyglIJ7wm7ik.webp?r=c23&quot;);
-}
-.scroll-images-6 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZ2Btia34ViHOdbGThR2xD0XYVD9vkdTkUULeET8PcHeq12ebMOJyLaTD1yS26NaRfUqDMknk2XnomOCg78WEKeN3VEDdOKzFRayBGveEZ-MeOaVD-v0z5P25idICKgt-nXX.webp?r=a1c&quot;);
-}
-.scroll-images-7 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABWtQdcUd4n6VKz6HTm_IbI2cOq0VDU7fDQpomIXBLuCYqtJ4j8hj2pz7j6spnX2osjRgTMJQ9xkMieYZWqC6xC8G4tGlTLJBm3I.webp?r=cc2&quot;);
-}
-.scroll-images-8 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYVcRfFB91jy3f8-_Alb6H4RUzqXFRA7ejjOfCOXF20XLRVeCyT3ZFEimKbZAimt2ayVUWXSnp6ApNxpoK0mA3XzJD__irrDkdMD6lDrOFPSvQqP8s0xn2dNBaU9JxIu4lUd.webp?r=63b&quot;);
-}
-.scroll-images-9 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABQqOh2yhpKE8385dV9hjlxxXtG63RjSjrlNOkx2yLuGMYe8JFTnA9ScVsioAhTa9Ds34ERhB2R4aBFUng1j54IFwl5JvjgVmGEU.webp?r=d66&quot;);
-}
-.scroll-images-10 {
-  background-image: url(https://occ-0-6245-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZFBdXweIqorvQIPkQbuKg9rFcZJJ8yCUzSX1ySYOsmrcMeUgLlY3YWvFcXee7lFjHwMT_Ofd03ttH-rTzAHPZskA6K-f4imBAY.webp?r=81d&quot;);
-}
-
-.number {
-  font-size: 100px;
-  font-weight: 700;
-  color: black;
-  -webkit-text-stroke: 0.5px white;
-  cursor: pointer;
-  text-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.5);
-  font-family: "NetflixCustomBold", sans-serif;
-  position: relative;
-  left: -20px;
-  top: -125px;
-  z-index: 2;
-}
-
-.netflix_section_3 {
-  height: 1760px;
-  background-color: black;
-}
-
-.join_text {
-  font-family: "NetflixCustomBold", sans-serif;
-  font-size: 24px;
-  font-weight: 500;
-  margin-left: 180px;
-  cursor: text;
-}
-
-.grid {
-  background-color: black;
-  display: grid;
-  height: 320px;
-  width: 90vw;
-  grid-template-columns: repeat(4, 20vw);
-  grid-template-rows: 280px;
-  gap: 16px;
-  justify-content: center;
-  box-sizing: border-box;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-right: 10px;
-}
-
-.box {
-  background: linear-gradient(149deg, #192247 0%, #210e17 99.08%);
-  display: flex;
-  border-radius: 16px;
-  width: 20vw;
-  height: 280px;
-  flex-direction: column;
-}
-
-.box_text1 {
-  display: flex;
-  justify-content: flex-start;
-  font-size: 24px;
-  font-weight: 500;
-  font-family: "NetflixCustomBold", sans-serif;
-  margin: 20px 0px 0px 20px;
-  width: 90%;
-  height: 20%;
-}
-
-.para {
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 1rem;
-  font-weight: 400;
-  font-family: "NetflixCustomLight", sans-serif;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.para1 {
-  margin-top: -10px;
-}
-
-.para2 {
-  margin-top: 20px;
-}
-
-.para3 {
-  margin-top: -10px;
-}
-
-.para4 {
-  margin-top: -10px;
-}
-
-.image_in_box {
-  align-self: flex-end;
-  margin-top: auto;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
-.faq_text {
-  font-family: "NetflixCustomMedium", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 500;
-  display: flex;
-  width: 45vw;
-  height: 70px;
   align-items: center;
   justify-content: center;
-}
-
-.faq {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 8px;
-  height: 600px;
-}
-
-.question {
-  width: calc(100vw - 20%);
-  align-self: center;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgb(45, 45, 45);
-  height: 84px;
-  text-align: left;
-  margin-left: 80px;
-  padding: 24px;
-  font-size: 24px;
-  font-family: "NetflixCustomLight", sans-serif;
-  color: rgb(255, 255, 255);
-  -webkit-text-stroke: 0.1px;
-  transition: filter 250ms cubic-bezier(0.4, 0, 0.68, 0.06);
-  user-select: none;
-  /* transition-duration: 250ms;
-  transition-property: background-color, margin-bottom, border-radius;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.68, 0.06); */
-}
-
-.question:hover {
-  filter: brightness(1.4);
-}
-
-.end_text {
-  color: rgb(255, 255, 255);
-  font-family: "NetflixCustomLight", sans-serif;
-  height: 50px;
-  width: 40vw;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  padding-left: 50px;
-}
-
-.email_and_getstarted_button {
-  height: 56px;
-  width: 90vw;
-  gap: 15px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding-left: 185px;
-}
-
-.email {
-  background-color: transparent;
-  height: 100%;
-  width: 45%;
-  color: white;
-  background: rgba(22, 22, 22, 0.85);
-  border-radius: 4px;
-  border: 1px solid rgba(128, 128, 128, 0.7);
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-
-  /* justify-content: space-between; */
-  padding: 0 12px;
-  /* margin-left: 390px; */
-}
-
-.email-input {
-  background-color: transparent;
-  height: 100%;
-  width: 100%;
-  caret-color: #fff;
-  font-size: 16px;
-  line-height: 1.5;
-  color: white;
-}
-
-.email-input::placeholder {
-  font-size: 16px;
-  font-weight: 400;
-  font-family: "NetflixCustomLight", sans-serif;
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.get_started_button_container {
-  width: 20%;
-  height: 100%;
-  display: flex;
-  /* justify-content: center;
-  align-items: center; */
-}
-
-.get_started_button {
-  color: white;
-  height: 100%;
-  background-color: rgb(229, 9, 20);
-  border-radius: 3px;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 213.25px;
-  font-size: 24px;
-  font-weight: bold;
-  justify-content: space-around;
-}
-
-.end_container {
-  padding-left: 155px;
-  padding-right: 155px;
-  height: 390px;
-  margin-top: 70px;
-}
-
-.questions_and_calls {
-  display: flex;
-  gap: 5px;
-  height: 50px;
-}
-
-.text_decor {
-  color: rgba(255, 255, 255, 0.7);
-  font-family: unset;
-  font-size: 14px !important;
-  font-weight: 400;
-  font-family: "NetflixCustomLight", sans-serif;
-}
-
-.underline_texts_grid {
-  display: grid;
-  grid-template-columns: repeat(4, 295px);
-  grid-template-rows: repeat(4, 21px);
-  /* gap: 2px; */
-  row-gap: 10px;
-  margin-top: 16px;
-  height: 175px;
-  cursor: pointer;
-}
-
-.underline_texts_grid > div {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.ques {
-  font-size: 16px !important;
-}
-
-.statement_and_link {
-  display: flex;
-  gap: 3px;
-}
-
-.statement_and_link > div {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: "NetflixCustomLight", sans-serif;
-  font-size: 0.8125rem;
-  font-weight: 400;
-}
-
-.link {
-  text-decoration: underline;
-  color: rgb(0, 0, 255) !important;
-  cursor: pointer;
 }
